--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="nav-bar">
             <figure class="logo">
-                <img src="./assets/img/Constructores_HA_Logo.png" width="100px" alt="">
+                <img src="./assets/img/Constructores_HA_Logo.png" width="200px" alt="">
             </figure>
             <div class="nav-bar-menu">
                 <p>Inicio</p>
@@ -30,53 +30,52 @@
             <img src="./assets/img/Banner_Home.jpg" alt="" width="100%">
         </figure>
 
-        <div class="">
-            <div class="card-section">
-                <div class="card">
-                    <figure class="card-icon">
-                        <img src="./assets/img/tunel_constructora_ha_ImgID1.png" alt="">
-                    </figure>
-                    <p>
-
-                    </p>
-                </div>
-                <div class="card">
-                    <figure class="card-icon">
-                        <img src="./assets/img/remodelaciones-constructora-ha_ImgID1.png" alt="">
-                    </figure>
-                    <p>
-
-                    </p>
-                </div>
-                <div class="card">
-                    <figure class="card-icon">
-                        <img src="./assets/img/urbanismo-constructora-ha_ImgID1.png" alt="">
-                    </figure>
-                    <p>
-
-                    </p>
-                </div>
-                <div class="card">
-                    <figure class="card-icon">
-                        <img src="./assets/img/estructuras-constructora-ha_ImgID1.png" alt="">
-                    </figure>
-                    <p>
-
-                    </p>
-                </div>
+        <div class="card-section">
+            <div class="card">
+                <figure class="card-icon">
+                    <img src="./assets/img/tunel_constructora_ha_ImgID1.png" alt="">
+                </figure>
+                <p>
+                    OBRAS DE ALCANTARILLADO Y ACUEDUCTO (TÚNEL LINER, POZOS, SUMIDEROS, CAJAS DE INSPECCIÓN)
+                </p>
+            </div>
+            <div class="card">
+                <figure class="card-icon">
+                    <img src="./assets/img/remodelaciones-constructora-ha_ImgID1.png" alt="">
+                </figure>
+                <p>
+                    URBANISMO, PARQUES, CUBIERTAS, MAMPOSTERÍA, OBRAS SISTEMAS LIVIANOS, OBRA BLANCA, TERMINADOS, REDES HIDRÁULICAS, REDES ELÉCTRICAS SISTEMAS CONTRA INCENDIOS
+                </p>
+            </div>
+            <div class="card">
+                <figure class="card-icon">
+                    <img src="./assets/img/urbanismo-constructora-ha_ImgID1.png" alt="">
+                </figure>
+                <p>
+                    ESTRUCTURAS EN CONCRETO Y METÁLICAS, MOVIMIENTO DE TIERRAS, ACUEDUCTOS Y ALCANTARILLADOS VÍAS, MUROS DE CONTENCIÓN
+                </p>
+            </div>
+            <div class="card">
+                <figure class="card-icon">
+                    <img src="./assets/img/estructuras-constructora-ha_ImgID1.png" alt="">
+                </figure>
+                <p>
+                    CONSTRUCCIÓN DE ESTRUCTURAS EN ACERO, MONTAJES DE ESTRUCTURAS METÁLICAS, TERMINADOS, ETC
+                </p>
             </div>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate libero iste quidem aspernatur quis quibusdam eaque quae quasi! Quisquam maiores deleniti asperiores atque, debitis non optio autem numquam quidem quis?</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate libero iste quidem aspernatur quis quibusdam eaque quae quasi! Quisquam maiores deleniti asperiores atque, debitis non optio autem numquam quidem quis?</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate libero iste quidem aspernatur quis quibusdam eaque quae quasi! Quisquam maiores deleniti asperiores atque, debitis non optio autem numquam quidem quis?</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate libero iste quidem aspernatur quis quibusdam eaque quae quasi! Quisquam maiores deleniti asperiores atque, debitis non optio autem numquam quidem quis?</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate libero iste quidem aspernatur quis quibusdam eaque quae quasi! Quisquam maiores deleniti asperiores atque, debitis non optio autem numquam quidem quis?</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate libero iste quidem aspernatur quis quibusdam eaque quae quasi! Quisquam maiores deleniti asperiores atque, debitis non optio autem numquam quidem quis?</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate libero iste quidem aspernatur quis quibusdam eaque quae quasi! Quisquam maiores deleniti asperiores atque, debitis non optio autem numquam quidem quis?</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate libero iste quidem aspernatur quis quibusdam eaque quae quasi! Quisquam maiores deleniti asperiores atque, debitis non optio autem numquam quidem quis?</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate libero iste quidem aspernatur quis quibusdam eaque quae quasi! Quisquam maiores deleniti asperiores atque, debitis non optio autem numquam quidem quis?</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate libero iste quidem aspernatur quis quibusdam eaque quae quasi! Quisquam maiores deleniti asperiores atque, debitis non optio autem numquam quidem quis?</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate libero iste quidem aspernatur quis quibusdam eaque quae quasi! Quisquam maiores deleniti asperiores atque, debitis non optio autem numquam quidem quis?</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate libero iste quidem aspernatur quis quibusdam eaque quae quasi! Quisquam maiores deleniti asperiores atque, debitis non optio autem numquam quidem quis? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate libero iste quidem aspernatur quis quibusdam eaque quae quasi! Quisquam maiores deleniti asperiores atque, debitis non optio autem numquam quidem quis?
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate libero iste quidem aspernatur quis quibusdam eaque quae quasi! Quisquam maiores deleniti asperiores atque, debitis non optio autem numquam quidem quis?
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate libero iste quidem aspernatur quis quibusdam eaque quae quasi! Quisquam maiores deleniti asperiores atque, debitis non optio autem numquam quidem quis?
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate libero iste quidem aspernatur quis quibusdam eaque quae quasi! Quisquam maiores deleniti asperiores atque, debitis non optio autem numquam quidem quis?
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate libero iste quidem aspernatur quis quibusdam eaque quae quasi! Quisquam maiores deleniti asperiores atque, debitis non optio autem numquam quidem quis?
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate libero iste quidem aspernatur quis quibusdam eaque quae quasi! Quisquam maiores deleniti asperiores atque, debitis non optio autem numquam quidem quis?
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate libero iste quidem aspernatur quis quibusdam eaque quae quasi! Quisquam maiores deleniti asperiores atque, debitis non optio autem numquam quidem quis?
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate libero iste quidem aspernatur quis quibusdam eaque quae quasi! Quisquam maiores deleniti asperiores atque, debitis non optio autem numquam quidem quis?
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate libero iste quidem aspernatur quis quibusdam eaque quae quasi! Quisquam maiores deleniti asperiores atque, debitis non optio autem numquam quidem quis?
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate libero iste quidem aspernatur quis quibusdam eaque quae quasi! Quisquam maiores deleniti asperiores atque, debitis non optio autem numquam quidem quis?
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate libero iste quidem aspernatur quis quibusdam eaque quae quasi! Quisquam maiores deleniti asperiores atque, debitis non optio autem numquam quidem quis?</p>
         
     </main>
     <footer>
